[package]
name = "sea-jet-derive"
version = "0.1.0"
authors = [ "Emile Fugulin <emile@caido.io>" ]
edition = "2021"
description = "Derive macros for sea-jet"
license = "MIT OR Apache-2.0"
repository = "https://github.com/caido/sea-jet"
categories = [ "database" ]
keywords = [ "database", "sql", "mysql", "postgres", "sqlite" ]

[lib]
proc-macro = true